--- a/microservice-gateway/microservice-zuul1.x/pom.xml
+++ b/microservice-gateway/microservice-zuul1.x/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>microservice-zuul</artifactId>
+    <artifactId>microservice-zuul1.x</artifactId>
     <packaging>jar</packaging>
 
     <properties>
