--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,69 @@
 
     <groupId>org.lyf</groupId>
     <artifactId>microservice-pratice-all</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>microservice-service-framework</module>
+        <module>microservice-gateway</module>
+        <module>microservice-register-center</module>
+        <module>microservice-config-center</module>
+        <module>microservice-service-framework/microservice-dubbo</module>
+        <module>microservice-service-framework/microservice-springcloud</module>
+        <module>microservice-service-framework/microservice-springcloud-alibaba</module>
+        <module>microservice-register-center/microservice-register-netflix</module>
+        <module>microservice-service-framework/microservice-springcloud/microservice-user-service</module>
+        <module>microservice-service-framework/microservice-common-util</module>
+        <module>microservice-gateway/microservice-zuul1.x</module>
+        <module>microservice-gateway/microservice-cloud-gateway</module>
+    </modules>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!--版本选择问题
+        https://spring.io/projects/spring-cloud ,
+        https://github.com/spring-cloud/spring-cloud-release/wiki/Supported-Versions#supported-releases-->
+        <!--boot 2.x 版本-->
+<!--        <spring-cloud.version>2021.0.0</spring-cloud.version>-->
+<!--        <spring-boot.version>2.6.3</spring-boot.version>-->
+        <!--boot 3.x 版本-->
+        <spring-cloud.version>2022.0.0</spring-cloud.version>
+        <spring-boot.version>3.0.0</spring-boot.version>
+
+
+        <spring-cloud-old.version>Finchley.RELEASE</spring-cloud-old.version>
+        <spring-boot-old.version>2.0.2.RELEASE</spring-boot-old.version>
+
+        <spring.cloud.alibaba.version>2021.0.4.0</spring.cloud.alibaba.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring.cloud.alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+
+    </dependencyManagement>
 
 </project>
